[package]
name = "grit-bitvec"
description = "Provides BitVec, a vector type that can store fixed-width data with irregular bit widths"
version = "0.2.0"
edition = "2021"
authors = ["Gabriel Lee Anderson <gla.ander@gmail.com>"]
repository = "https://github.com/gabe-lee/grit-bitvec.git"
license = "BSD-3-Clause"
keywords = []
categories = ["data-structures"]

[dependencies]

[profile.dev]
overflow-checks = false

[features]
default = ["small_int_impls"]
small_int_impls = []
large_int_impls = []